versions/0.24.0/_sources/refs/_aws-cdk_aws-secretsmanager.rst.txt
.. @jsii-pacmak:meta@ {"fingerprint":"AdvNBxUmldWLuP+RQ3/kYYSShKZNXaQHJdynPTSIkBw="}

@aws-cdk/aws-secretsmanager
===========================

.. mdinclude:: ./__aws-cdk_aws-secretsmanager.README.md

Reference
---------

.. tabs::

   .. group-tab:: C#

      View in `Nuget <https://www.nuget.org/packages/Amazon.CDK.AWS.SecretsManager/0.24.0>`_

      **csproj**:

      .. code-block:: xml

         <PackageReference Include="Amazon.CDK.AWS.SecretsManager" Version="0.24.0" />

      **dotnet**:

      .. code-block:: console

         dotnet add package Amazon.CDK.AWS.SecretsManager --version 0.24.0

      **packages.config**:

      .. code-block:: xml

         <package id="Amazon.CDK.AWS.SecretsManager" version="0.24.0" />


   .. group-tab:: Java

      View in `Maven Central <https://repo1.maven.org/maven2/software/amazon/awscdk/secretsmanager/0.24.0/>`_

      **Apache Buildr**:

      .. code-block:: none

         'software.amazon.awscdk:secretsmanager:jar:0.24.0'

      **Apache Ivy**:

      .. code-block:: xml

         <dependency groupId="software.amazon.awscdk" name="secretsmanager" rev="0.24.0"/>

      **Apache Maven**:

      .. code-block:: xml

         <dependency>
           <groupId>software.amazon.awscdk</groupId>
           <artifactId>secretsmanager</artifactId>
           <version>0.24.0</version>
         </dependency>

      **Gradle / Grails**:

      .. code-block:: none

         compile 'software.amazon.awscdk:secretsmanager:0.24.0'

      **Groovy Grape**:

      .. code-block:: none

         @Grapes(
         @Grab(group='software.amazon.awscdk', module='secretsmanager', version='0.24.0')
         )


   .. group-tab:: JavaScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-secretsmanager/v/0.24.0>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-secretsmanager@0.24.0

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-secretsmanager": "^0.24.0"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-secretsmanager@0.24.0


   .. group-tab:: TypeScript

      View in `NPM <https://www.npmjs.com/package/@aws-cdk/aws-secretsmanager/v/0.24.0>`_

      **npm**:

      .. code-block:: console

         $ npm i @aws-cdk/aws-secretsmanager@0.24.0

      **package.json**:

      .. code-block:: js

         {
           "@aws-cdk/aws-secretsmanager": "^0.24.0"
         }

      **yarn**:

      .. code-block:: console

         $ yarn add @aws-cdk/aws-secretsmanager@0.24.0



.. py:module:: @aws-cdk/aws-secretsmanager

CfnResourcePolicy
^^^^^^^^^^^^^^^^^

.. py:class:: CfnResourcePolicy(scope, id, props)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SecretsManager;

      .. code-tab:: java

         import software.amazon.awscdk.services.secretsmanager.CfnResourcePolicy;

      .. code-tab:: javascript

         const { CfnResourcePolicy } = require('@aws-cdk/aws-secretsmanager');

      .. code-tab:: typescript

         import { CfnResourcePolicy } from '@aws-cdk/aws-secretsmanager';



   :extends: :py:class:`@aws-cdk/cdk.Resource`\ 
   :param scope: scope in which this resource is defined
   :type scope: :py:class:`@aws-cdk/cdk.Construct`\ 
   :param id: scoped id of the resource
   :type id: string
   :param props: resource properties
   :type props: :py:class:`~@aws-cdk/aws-secretsmanager.CfnResourcePolicyProps`\ 

   .. py:method:: renderProperties(properties) -> string => any

      *Overrides* :py:meth:`@aws-cdk/cdk.Resource.renderProperties`

      *Protected method*

      :param properties: 
      :type properties: any
      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.



      :type: string *(readonly)* *(static)*


   .. py:attribute:: propertyOverrides

      :type: :py:class:`~@aws-cdk/aws-secretsmanager.CfnResourcePolicyProps`\  *(readonly)*


   .. py:attribute:: resourcePolicySecretArn

      :type: string *(readonly)*


   .. py:method:: apply(aspect)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.apply>`

      Applies the aspect to this Constructs node



      :param aspect: 
      :type aspect: :py:class:`@aws-cdk/cdk.IAspect`\ 


   .. py:method:: toString() -> string

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.toString>`

      Returns a string representation of this construct.



      :rtype: string


   .. py:method:: validate() -> string[]

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.validate>`

      Validate the current construct.

      

      This method can be implemented by derived constructs in order to perform

      validation logic. It is called on all constructs before synthesis.



      *Protected method*

      :return: An array of validation error messages, or an empty array if there the construct is valid.
      :rtype: string[]


   .. py:attribute:: dependencyRoots

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.dependencyRoots>`

      The set of constructs that form the root of this dependable

      

      All resources under all returned constructs are included in the ordering

      dependency.



      :type: :py:class:`@aws-cdk/cdk.IConstruct`\ [] *(readonly)*


   .. py:attribute:: node

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.node>`

      Construct node.



      :type: :py:class:`@aws-cdk/cdk.ConstructNode`\  *(readonly)*


   .. py:attribute:: ref

      *Inherited from* :py:attr:`@aws-cdk/cdk.Referenceable <@aws-cdk/cdk.Referenceable.ref>`

      Returns a token to a CloudFormation { Ref } that references this entity based on it's logical ID.



      :type: string *(readonly)*


   .. py:method:: addDeletionOverride(path)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addDeletionOverride>`

      Syntactic sugar for `addOverride(path, undefined)`.



      :param path: The path of the value to delete
      :type path: string


   .. py:method:: addDependsOn(resource)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addDependsOn>`

      Indicates that this resource depends on another resource and cannot be provisioned

      unless the other resource has been successfully provisioned.



      :param resource: 
      :type resource: :py:class:`@aws-cdk/cdk.Resource`\ 


   .. py:method:: addOverride(path, value)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addOverride>`

      Adds an override to the synthesized CloudFormation resource. To add a

      property override, either use `addPropertyOverride` or prefix `path` with

      "Properties." (i.e. `Properties.TopicName`).



      :param path: The path of the property, you can use dot notation to override values in complex types. Any intermdediate keys will be created as needed.
      :type path: string
      :param value: The value. Could be primitive or complex.
      :type value: any


   .. py:method:: addPropertyDeletionOverride(propertyPath)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addPropertyDeletionOverride>`

      Adds an override that deletes the value of a property from the resource definition.



      :param propertyPath: The path to the property.
      :type propertyPath: string


   .. py:method:: addPropertyOverride(propertyPath, value)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addPropertyOverride>`

      Adds an override to a resource property.

      

      Syntactic sugar for `addOverride("Properties.<...>", value)`.



      :param propertyPath: The path of the property
      :type propertyPath: string
      :param value: The value
      :type value: any


   .. py:method:: getAtt(attributeName) -> @aws-cdk/cdk.CfnReference

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.getAtt>`

      Returns a token for an runtime attribute of this resource.

      Ideally, use generated attribute accessors (e.g. `resource.arn`), but this can be used for future compatibility

      in case there is no generated attribute.



      :param attributeName: The name of the attribute.
      :type attributeName: string
      :rtype: :py:class:`@aws-cdk/cdk.CfnReference`\ 


   .. py:method:: toCloudFormation() -> json

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.toCloudFormation>`

      Emits CloudFormation for this resource.



      :rtype: json


   .. py:attribute:: options

      *Inherited from* :py:attr:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.options>`

      Options for this resource, such as condition, update policy etc.



      :type: :py:class:`@aws-cdk/cdk.ResourceOptions`\  *(readonly)*


   .. py:attribute:: properties

      *Inherited from* :py:attr:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.properties>`

      AWS resource properties.

      

      This object is rendered via a call to "renderProperties(this.properties)".



      *Protected property*

      :type: any *(readonly)*


   .. py:attribute:: resourceType

      *Inherited from* :py:attr:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.resourceType>`

      AWS resource type.



      :type: string *(readonly)*


   .. py:attribute:: untypedPropertyOverrides

      *Inherited from* :py:attr:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.untypedPropertyOverrides>`

      AWS resource property overrides.

      

      During synthesis, the method "renderProperties(this.overrides)" is called

      with this object, and merged on top of the output of

      "renderProperties(this.properties)".

      

      Derived classes should expose a strongly-typed version of this object as

      a public property called `propertyOverrides`.



      *Protected property*

      :type: any *(readonly)*


   .. py:method:: overrideLogicalId(newLogicalId)

      *Inherited from* :py:meth:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.overrideLogicalId>`

      Overrides the auto-generated logical ID with a specific ID.



      :param newLogicalId: The new logical ID to use for this stack element.
      :type newLogicalId: string


   .. py:method:: prepare()

      *Inherited from* :py:meth:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.prepare>`

      Automatically detect references in this StackElement



      *Protected method*



   .. py:attribute:: creationStackTrace

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.creationStackTrace>`

      :type: string[] *(readonly)*


   .. py:attribute:: logicalId

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.logicalId>`

      The logical ID for this CloudFormation stack element. The logical ID of the element

      is calculated from the path of the resource node in the construct tree.

      

      To override this value, use `overrideLogicalId(newLogicalId)`.



      :type: string *(readonly)*


   .. py:attribute:: stackPath

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.stackPath>`

      Return the path with respect to the stack



      :type: string *(readonly)*


   .. py:attribute:: stack

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.stack>`

      The stack this Construct has been made a part of



      *Protected property*

      :type: :py:class:`@aws-cdk/cdk.Stack`\ 


CfnResourcePolicyProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: CfnResourcePolicyProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SecretsManager;

      .. code-tab:: java

         import software.amazon.awscdk.services.secretsmanager.CfnResourcePolicyProps;

      .. code-tab:: javascript

         // CfnResourcePolicyProps is an interface

      .. code-tab:: typescript

         import { CfnResourcePolicyProps } from '@aws-cdk/aws-secretsmanager';





   .. py:attribute:: resourcePolicy

      ``AWS::SecretsManager::ResourcePolicy.ResourcePolicy``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-secretsmanager-resourcepolicy.html#cfn-secretsmanager-resourcepolicy-resourcepolicy


      :type: json or :py:class:`@aws-cdk/cdk.Token`\ 


   .. py:attribute:: secretId

      ``AWS::SecretsManager::ResourcePolicy.SecretId``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-secretsmanager-resourcepolicy.html#cfn-secretsmanager-resourcepolicy-secretid


      :type: string


CfnRotationSchedule
^^^^^^^^^^^^^^^^^^^

.. py:class:: CfnRotationSchedule(scope, id, props)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SecretsManager;

      .. code-tab:: java

         import software.amazon.awscdk.services.secretsmanager.CfnRotationSchedule;

      .. code-tab:: javascript

         const { CfnRotationSchedule } = require('@aws-cdk/aws-secretsmanager');

      .. code-tab:: typescript

         import { CfnRotationSchedule } from '@aws-cdk/aws-secretsmanager';



   :extends: :py:class:`@aws-cdk/cdk.Resource`\ 
   :param scope: scope in which this resource is defined
   :type scope: :py:class:`@aws-cdk/cdk.Construct`\ 
   :param id: scoped id of the resource
   :type id: string
   :param props: resource properties
   :type props: :py:class:`~@aws-cdk/aws-secretsmanager.CfnRotationScheduleProps`\ 

   .. py:method:: renderProperties(properties) -> string => any

      *Overrides* :py:meth:`@aws-cdk/cdk.Resource.renderProperties`

      *Protected method*

      :param properties: 
      :type properties: any
      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.



      :type: string *(readonly)* *(static)*


   .. py:attribute:: propertyOverrides

      :type: :py:class:`~@aws-cdk/aws-secretsmanager.CfnRotationScheduleProps`\  *(readonly)*


   .. py:attribute:: rotationScheduleSecretArn

      :type: string *(readonly)*

   .. py:class:: RotationRulesProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.SecretsManager;

         .. code-tab:: java

            import software.amazon.awscdk.services.secretsmanager.CfnRotationSchedule.RotationRulesProperty;

         .. code-tab:: javascript

            // CfnRotationSchedule.RotationRulesProperty is an interface

         .. code-tab:: typescript

            import { CfnRotationSchedule.RotationRulesProperty } from '@aws-cdk/aws-secretsmanager';





      .. py:attribute:: automaticallyAfterDays

         ``CfnRotationSchedule.RotationRulesProperty.AutomaticallyAfterDays``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-secretsmanager-rotationschedule-rotationrules.html#cfn-secretsmanager-rotationschedule-rotationrules-automaticallyafterdays


         :type: number or :py:class:`@aws-cdk/cdk.Token`\  *(optional)*



   .. py:method:: apply(aspect)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.apply>`

      Applies the aspect to this Constructs node



      :param aspect: 
      :type aspect: :py:class:`@aws-cdk/cdk.IAspect`\ 


   .. py:method:: toString() -> string

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.toString>`

      Returns a string representation of this construct.



      :rtype: string


   .. py:method:: validate() -> string[]

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.validate>`

      Validate the current construct.

      

      This method can be implemented by derived constructs in order to perform

      validation logic. It is called on all constructs before synthesis.



      *Protected method*

      :return: An array of validation error messages, or an empty array if there the construct is valid.
      :rtype: string[]


   .. py:attribute:: dependencyRoots

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.dependencyRoots>`

      The set of constructs that form the root of this dependable

      

      All resources under all returned constructs are included in the ordering

      dependency.



      :type: :py:class:`@aws-cdk/cdk.IConstruct`\ [] *(readonly)*


   .. py:attribute:: node

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.node>`

      Construct node.



      :type: :py:class:`@aws-cdk/cdk.ConstructNode`\  *(readonly)*


   .. py:attribute:: ref

      *Inherited from* :py:attr:`@aws-cdk/cdk.Referenceable <@aws-cdk/cdk.Referenceable.ref>`

      Returns a token to a CloudFormation { Ref } that references this entity based on it's logical ID.



      :type: string *(readonly)*


   .. py:method:: addDeletionOverride(path)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addDeletionOverride>`

      Syntactic sugar for `addOverride(path, undefined)`.



      :param path: The path of the value to delete
      :type path: string


   .. py:method:: addDependsOn(resource)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addDependsOn>`

      Indicates that this resource depends on another resource and cannot be provisioned

      unless the other resource has been successfully provisioned.



      :param resource: 
      :type resource: :py:class:`@aws-cdk/cdk.Resource`\ 


   .. py:method:: addOverride(path, value)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addOverride>`

      Adds an override to the synthesized CloudFormation resource. To add a

      property override, either use `addPropertyOverride` or prefix `path` with

      "Properties." (i.e. `Properties.TopicName`).



      :param path: The path of the property, you can use dot notation to override values in complex types. Any intermdediate keys will be created as needed.
      :type path: string
      :param value: The value. Could be primitive or complex.
      :type value: any


   .. py:method:: addPropertyDeletionOverride(propertyPath)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addPropertyDeletionOverride>`

      Adds an override that deletes the value of a property from the resource definition.



      :param propertyPath: The path to the property.
      :type propertyPath: string


   .. py:method:: addPropertyOverride(propertyPath, value)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addPropertyOverride>`

      Adds an override to a resource property.

      

      Syntactic sugar for `addOverride("Properties.<...>", value)`.



      :param propertyPath: The path of the property
      :type propertyPath: string
      :param value: The value
      :type value: any


   .. py:method:: getAtt(attributeName) -> @aws-cdk/cdk.CfnReference

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.getAtt>`

      Returns a token for an runtime attribute of this resource.

      Ideally, use generated attribute accessors (e.g. `resource.arn`), but this can be used for future compatibility

      in case there is no generated attribute.



      :param attributeName: The name of the attribute.
      :type attributeName: string
      :rtype: :py:class:`@aws-cdk/cdk.CfnReference`\ 


   .. py:method:: toCloudFormation() -> json

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.toCloudFormation>`

      Emits CloudFormation for this resource.



      :rtype: json


   .. py:attribute:: options

      *Inherited from* :py:attr:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.options>`

      Options for this resource, such as condition, update policy etc.



      :type: :py:class:`@aws-cdk/cdk.ResourceOptions`\  *(readonly)*


   .. py:attribute:: properties

      *Inherited from* :py:attr:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.properties>`

      AWS resource properties.

      

      This object is rendered via a call to "renderProperties(this.properties)".



      *Protected property*

      :type: any *(readonly)*


   .. py:attribute:: resourceType

      *Inherited from* :py:attr:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.resourceType>`

      AWS resource type.



      :type: string *(readonly)*


   .. py:attribute:: untypedPropertyOverrides

      *Inherited from* :py:attr:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.untypedPropertyOverrides>`

      AWS resource property overrides.

      

      During synthesis, the method "renderProperties(this.overrides)" is called

      with this object, and merged on top of the output of

      "renderProperties(this.properties)".

      

      Derived classes should expose a strongly-typed version of this object as

      a public property called `propertyOverrides`.



      *Protected property*

      :type: any *(readonly)*


   .. py:method:: overrideLogicalId(newLogicalId)

      *Inherited from* :py:meth:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.overrideLogicalId>`

      Overrides the auto-generated logical ID with a specific ID.



      :param newLogicalId: The new logical ID to use for this stack element.
      :type newLogicalId: string


   .. py:method:: prepare()

      *Inherited from* :py:meth:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.prepare>`

      Automatically detect references in this StackElement



      *Protected method*



   .. py:attribute:: creationStackTrace

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.creationStackTrace>`

      :type: string[] *(readonly)*


   .. py:attribute:: logicalId

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.logicalId>`

      The logical ID for this CloudFormation stack element. The logical ID of the element

      is calculated from the path of the resource node in the construct tree.

      

      To override this value, use `overrideLogicalId(newLogicalId)`.



      :type: string *(readonly)*


   .. py:attribute:: stackPath

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.stackPath>`

      Return the path with respect to the stack



      :type: string *(readonly)*


   .. py:attribute:: stack

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.stack>`

      The stack this Construct has been made a part of



      *Protected property*

      :type: :py:class:`@aws-cdk/cdk.Stack`\ 


CfnRotationScheduleProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: CfnRotationScheduleProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SecretsManager;

      .. code-tab:: java

         import software.amazon.awscdk.services.secretsmanager.CfnRotationScheduleProps;

      .. code-tab:: javascript

         // CfnRotationScheduleProps is an interface

      .. code-tab:: typescript

         import { CfnRotationScheduleProps } from '@aws-cdk/aws-secretsmanager';





   .. py:attribute:: secretId

      ``AWS::SecretsManager::RotationSchedule.SecretId``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-secretsmanager-rotationschedule.html#cfn-secretsmanager-rotationschedule-secretid


      :type: string


   .. py:attribute:: rotationLambdaArn

      ``AWS::SecretsManager::RotationSchedule.RotationLambdaARN``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-secretsmanager-rotationschedule.html#cfn-secretsmanager-rotationschedule-rotationlambdaarn


      :type: string *(optional)*


   .. py:attribute:: rotationRules

      ``AWS::SecretsManager::RotationSchedule.RotationRules``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-secretsmanager-rotationschedule.html#cfn-secretsmanager-rotationschedule-rotationrules


      :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-secretsmanager.CfnRotationSchedule.RotationRulesProperty`\  *(optional)*


CfnSecret
^^^^^^^^^

.. py:class:: CfnSecret(scope, id, [props])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SecretsManager;

      .. code-tab:: java

         import software.amazon.awscdk.services.secretsmanager.CfnSecret;

      .. code-tab:: javascript

         const { CfnSecret } = require('@aws-cdk/aws-secretsmanager');

      .. code-tab:: typescript

         import { CfnSecret } from '@aws-cdk/aws-secretsmanager';



   :extends: :py:class:`@aws-cdk/cdk.Resource`\ 
   :param scope: scope in which this resource is defined
   :type scope: :py:class:`@aws-cdk/cdk.Construct`\ 
   :param id: scoped id of the resource
   :type id: string
   :param props: resource properties
   :type props: :py:class:`~@aws-cdk/aws-secretsmanager.CfnSecretProps`\  *(optional)*

   .. py:method:: renderProperties(properties) -> string => any

      *Overrides* :py:meth:`@aws-cdk/cdk.Resource.renderProperties`

      *Protected method*

      :param properties: 
      :type properties: any
      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.



      :type: string *(readonly)* *(static)*


   .. py:attribute:: propertyOverrides

      :type: :py:class:`~@aws-cdk/aws-secretsmanager.CfnSecretProps`\  *(readonly)*


   .. py:attribute:: secretArn

      :type: string *(readonly)*


   .. py:attribute:: tags

      The ``TagManager`` handles setting, removing and formatting tags

      

      Tags should be managed either passing them as properties during

      initiation or by calling methods on this object. If both techniques are

      used only the tags from the TagManager will be used. ``Tag`` (aspect)

      will use the manager.



      :type: :py:class:`@aws-cdk/cdk.TagManager`\  *(readonly)*

   .. py:class:: GenerateSecretStringProperty

      **Language-specific names:**

      .. tabs::

         .. code-tab:: c#

            using Amazon.CDK.AWS.SecretsManager;

         .. code-tab:: java

            import software.amazon.awscdk.services.secretsmanager.CfnSecret.GenerateSecretStringProperty;

         .. code-tab:: javascript

            // CfnSecret.GenerateSecretStringProperty is an interface

         .. code-tab:: typescript

            import { CfnSecret.GenerateSecretStringProperty } from '@aws-cdk/aws-secretsmanager';





      .. py:attribute:: excludeCharacters

         ``CfnSecret.GenerateSecretStringProperty.ExcludeCharacters``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-secretsmanager-secret-generatesecretstring.html#cfn-secretsmanager-secret-generatesecretstring-excludecharacters


         :type: string *(optional)*


      .. py:attribute:: excludeLowercase

         ``CfnSecret.GenerateSecretStringProperty.ExcludeLowercase``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-secretsmanager-secret-generatesecretstring.html#cfn-secretsmanager-secret-generatesecretstring-excludelowercase


         :type: boolean or :py:class:`@aws-cdk/cdk.Token`\  *(optional)*


      .. py:attribute:: excludeNumbers

         ``CfnSecret.GenerateSecretStringProperty.ExcludeNumbers``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-secretsmanager-secret-generatesecretstring.html#cfn-secretsmanager-secret-generatesecretstring-excludenumbers


         :type: boolean or :py:class:`@aws-cdk/cdk.Token`\  *(optional)*


      .. py:attribute:: excludePunctuation

         ``CfnSecret.GenerateSecretStringProperty.ExcludePunctuation``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-secretsmanager-secret-generatesecretstring.html#cfn-secretsmanager-secret-generatesecretstring-excludepunctuation


         :type: boolean or :py:class:`@aws-cdk/cdk.Token`\  *(optional)*


      .. py:attribute:: excludeUppercase

         ``CfnSecret.GenerateSecretStringProperty.ExcludeUppercase``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-secretsmanager-secret-generatesecretstring.html#cfn-secretsmanager-secret-generatesecretstring-excludeuppercase


         :type: boolean or :py:class:`@aws-cdk/cdk.Token`\  *(optional)*


      .. py:attribute:: generateStringKey

         ``CfnSecret.GenerateSecretStringProperty.GenerateStringKey``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-secretsmanager-secret-generatesecretstring.html#cfn-secretsmanager-secret-generatesecretstring-generatestringkey


         :type: string *(optional)*


      .. py:attribute:: includeSpace

         ``CfnSecret.GenerateSecretStringProperty.IncludeSpace``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-secretsmanager-secret-generatesecretstring.html#cfn-secretsmanager-secret-generatesecretstring-includespace


         :type: boolean or :py:class:`@aws-cdk/cdk.Token`\  *(optional)*


      .. py:attribute:: passwordLength

         ``CfnSecret.GenerateSecretStringProperty.PasswordLength``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-secretsmanager-secret-generatesecretstring.html#cfn-secretsmanager-secret-generatesecretstring-passwordlength


         :type: number or :py:class:`@aws-cdk/cdk.Token`\  *(optional)*


      .. py:attribute:: requireEachIncludedType

         ``CfnSecret.GenerateSecretStringProperty.RequireEachIncludedType``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-secretsmanager-secret-generatesecretstring.html#cfn-secretsmanager-secret-generatesecretstring-requireeachincludedtype


         :type: boolean or :py:class:`@aws-cdk/cdk.Token`\  *(optional)*


      .. py:attribute:: secretStringTemplate

         ``CfnSecret.GenerateSecretStringProperty.SecretStringTemplate``

         http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-properties-secretsmanager-secret-generatesecretstring.html#cfn-secretsmanager-secret-generatesecretstring-secretstringtemplate


         :type: string *(optional)*



   .. py:method:: apply(aspect)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.apply>`

      Applies the aspect to this Constructs node



      :param aspect: 
      :type aspect: :py:class:`@aws-cdk/cdk.IAspect`\ 


   .. py:method:: toString() -> string

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.toString>`

      Returns a string representation of this construct.



      :rtype: string


   .. py:method:: validate() -> string[]

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.validate>`

      Validate the current construct.

      

      This method can be implemented by derived constructs in order to perform

      validation logic. It is called on all constructs before synthesis.



      *Protected method*

      :return: An array of validation error messages, or an empty array if there the construct is valid.
      :rtype: string[]


   .. py:attribute:: dependencyRoots

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.dependencyRoots>`

      The set of constructs that form the root of this dependable

      

      All resources under all returned constructs are included in the ordering

      dependency.



      :type: :py:class:`@aws-cdk/cdk.IConstruct`\ [] *(readonly)*


   .. py:attribute:: node

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.node>`

      Construct node.



      :type: :py:class:`@aws-cdk/cdk.ConstructNode`\  *(readonly)*


   .. py:attribute:: ref

      *Inherited from* :py:attr:`@aws-cdk/cdk.Referenceable <@aws-cdk/cdk.Referenceable.ref>`

      Returns a token to a CloudFormation { Ref } that references this entity based on it's logical ID.



      :type: string *(readonly)*


   .. py:method:: addDeletionOverride(path)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addDeletionOverride>`

      Syntactic sugar for `addOverride(path, undefined)`.



      :param path: The path of the value to delete
      :type path: string


   .. py:method:: addDependsOn(resource)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addDependsOn>`

      Indicates that this resource depends on another resource and cannot be provisioned

      unless the other resource has been successfully provisioned.



      :param resource: 
      :type resource: :py:class:`@aws-cdk/cdk.Resource`\ 


   .. py:method:: addOverride(path, value)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addOverride>`

      Adds an override to the synthesized CloudFormation resource. To add a

      property override, either use `addPropertyOverride` or prefix `path` with

      "Properties." (i.e. `Properties.TopicName`).



      :param path: The path of the property, you can use dot notation to override values in complex types. Any intermdediate keys will be created as needed.
      :type path: string
      :param value: The value. Could be primitive or complex.
      :type value: any


   .. py:method:: addPropertyDeletionOverride(propertyPath)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addPropertyDeletionOverride>`

      Adds an override that deletes the value of a property from the resource definition.



      :param propertyPath: The path to the property.
      :type propertyPath: string


   .. py:method:: addPropertyOverride(propertyPath, value)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addPropertyOverride>`

      Adds an override to a resource property.

      

      Syntactic sugar for `addOverride("Properties.<...>", value)`.



      :param propertyPath: The path of the property
      :type propertyPath: string
      :param value: The value
      :type value: any


   .. py:method:: getAtt(attributeName) -> @aws-cdk/cdk.CfnReference

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.getAtt>`

      Returns a token for an runtime attribute of this resource.

      Ideally, use generated attribute accessors (e.g. `resource.arn`), but this can be used for future compatibility

      in case there is no generated attribute.



      :param attributeName: The name of the attribute.
      :type attributeName: string
      :rtype: :py:class:`@aws-cdk/cdk.CfnReference`\ 


   .. py:method:: toCloudFormation() -> json

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.toCloudFormation>`

      Emits CloudFormation for this resource.



      :rtype: json


   .. py:attribute:: options

      *Inherited from* :py:attr:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.options>`

      Options for this resource, such as condition, update policy etc.



      :type: :py:class:`@aws-cdk/cdk.ResourceOptions`\  *(readonly)*


   .. py:attribute:: properties

      *Inherited from* :py:attr:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.properties>`

      AWS resource properties.

      

      This object is rendered via a call to "renderProperties(this.properties)".



      *Protected property*

      :type: any *(readonly)*


   .. py:attribute:: resourceType

      *Inherited from* :py:attr:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.resourceType>`

      AWS resource type.



      :type: string *(readonly)*


   .. py:attribute:: untypedPropertyOverrides

      *Inherited from* :py:attr:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.untypedPropertyOverrides>`

      AWS resource property overrides.

      

      During synthesis, the method "renderProperties(this.overrides)" is called

      with this object, and merged on top of the output of

      "renderProperties(this.properties)".

      

      Derived classes should expose a strongly-typed version of this object as

      a public property called `propertyOverrides`.



      *Protected property*

      :type: any *(readonly)*


   .. py:method:: overrideLogicalId(newLogicalId)

      *Inherited from* :py:meth:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.overrideLogicalId>`

      Overrides the auto-generated logical ID with a specific ID.



      :param newLogicalId: The new logical ID to use for this stack element.
      :type newLogicalId: string


   .. py:method:: prepare()

      *Inherited from* :py:meth:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.prepare>`

      Automatically detect references in this StackElement



      *Protected method*



   .. py:attribute:: creationStackTrace

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.creationStackTrace>`

      :type: string[] *(readonly)*


   .. py:attribute:: logicalId

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.logicalId>`

      The logical ID for this CloudFormation stack element. The logical ID of the element

      is calculated from the path of the resource node in the construct tree.

      

      To override this value, use `overrideLogicalId(newLogicalId)`.



      :type: string *(readonly)*


   .. py:attribute:: stackPath

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.stackPath>`

      Return the path with respect to the stack



      :type: string *(readonly)*


   .. py:attribute:: stack

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.stack>`

      The stack this Construct has been made a part of



      *Protected property*

      :type: :py:class:`@aws-cdk/cdk.Stack`\ 


CfnSecretProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: CfnSecretProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SecretsManager;

      .. code-tab:: java

         import software.amazon.awscdk.services.secretsmanager.CfnSecretProps;

      .. code-tab:: javascript

         // CfnSecretProps is an interface

      .. code-tab:: typescript

         import { CfnSecretProps } from '@aws-cdk/aws-secretsmanager';





   .. py:attribute:: description

      ``AWS::SecretsManager::Secret.Description``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-secretsmanager-secret.html#cfn-secretsmanager-secret-description


      :type: string *(optional)*


   .. py:attribute:: generateSecretString

      ``AWS::SecretsManager::Secret.GenerateSecretString``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-secretsmanager-secret.html#cfn-secretsmanager-secret-generatesecretstring


      :type: :py:class:`@aws-cdk/cdk.Token`\  or :py:class:`~@aws-cdk/aws-secretsmanager.CfnSecret.GenerateSecretStringProperty`\  *(optional)*


   .. py:attribute:: kmsKeyId

      ``AWS::SecretsManager::Secret.KmsKeyId``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-secretsmanager-secret.html#cfn-secretsmanager-secret-kmskeyid


      :type: string *(optional)*


   .. py:attribute:: name

      ``AWS::SecretsManager::Secret.Name``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-secretsmanager-secret.html#cfn-secretsmanager-secret-name


      :type: string *(optional)*


   .. py:attribute:: secretString

      ``AWS::SecretsManager::Secret.SecretString``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-secretsmanager-secret.html#cfn-secretsmanager-secret-secretstring


      :type: string *(optional)*


   .. py:attribute:: tags

      ``AWS::SecretsManager::Secret.Tags``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-secretsmanager-secret.html#cfn-secretsmanager-secret-tags


      :type: :py:class:`@aws-cdk/cdk.Token`\  or (:py:class:`@aws-cdk/cdk.Token`\  or :py:class:`@aws-cdk/cdk.CfnTag`\ )[] *(optional)*


CfnSecretTargetAttachment
^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: CfnSecretTargetAttachment(scope, id, props)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SecretsManager;

      .. code-tab:: java

         import software.amazon.awscdk.services.secretsmanager.CfnSecretTargetAttachment;

      .. code-tab:: javascript

         const { CfnSecretTargetAttachment } = require('@aws-cdk/aws-secretsmanager');

      .. code-tab:: typescript

         import { CfnSecretTargetAttachment } from '@aws-cdk/aws-secretsmanager';



   :extends: :py:class:`@aws-cdk/cdk.Resource`\ 
   :param scope: scope in which this resource is defined
   :type scope: :py:class:`@aws-cdk/cdk.Construct`\ 
   :param id: scoped id of the resource
   :type id: string
   :param props: resource properties
   :type props: :py:class:`~@aws-cdk/aws-secretsmanager.CfnSecretTargetAttachmentProps`\ 

   .. py:method:: renderProperties(properties) -> string => any

      *Overrides* :py:meth:`@aws-cdk/cdk.Resource.renderProperties`

      *Protected method*

      :param properties: 
      :type properties: any
      :rtype: string => any


   .. py:attribute:: resourceTypeName

      The CloudFormation resource type name for this resource class.



      :type: string *(readonly)* *(static)*


   .. py:attribute:: propertyOverrides

      :type: :py:class:`~@aws-cdk/aws-secretsmanager.CfnSecretTargetAttachmentProps`\  *(readonly)*


   .. py:attribute:: secretTargetAttachmentSecretArn

      :type: string *(readonly)*


   .. py:method:: apply(aspect)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.apply>`

      Applies the aspect to this Constructs node



      :param aspect: 
      :type aspect: :py:class:`@aws-cdk/cdk.IAspect`\ 


   .. py:method:: toString() -> string

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.toString>`

      Returns a string representation of this construct.



      :rtype: string


   .. py:method:: validate() -> string[]

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.validate>`

      Validate the current construct.

      

      This method can be implemented by derived constructs in order to perform

      validation logic. It is called on all constructs before synthesis.



      *Protected method*

      :return: An array of validation error messages, or an empty array if there the construct is valid.
      :rtype: string[]


   .. py:attribute:: dependencyRoots

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.dependencyRoots>`

      The set of constructs that form the root of this dependable

      

      All resources under all returned constructs are included in the ordering

      dependency.



      :type: :py:class:`@aws-cdk/cdk.IConstruct`\ [] *(readonly)*


   .. py:attribute:: node

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.node>`

      Construct node.



      :type: :py:class:`@aws-cdk/cdk.ConstructNode`\  *(readonly)*


   .. py:attribute:: ref

      *Inherited from* :py:attr:`@aws-cdk/cdk.Referenceable <@aws-cdk/cdk.Referenceable.ref>`

      Returns a token to a CloudFormation { Ref } that references this entity based on it's logical ID.



      :type: string *(readonly)*


   .. py:method:: addDeletionOverride(path)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addDeletionOverride>`

      Syntactic sugar for `addOverride(path, undefined)`.



      :param path: The path of the value to delete
      :type path: string


   .. py:method:: addDependsOn(resource)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addDependsOn>`

      Indicates that this resource depends on another resource and cannot be provisioned

      unless the other resource has been successfully provisioned.



      :param resource: 
      :type resource: :py:class:`@aws-cdk/cdk.Resource`\ 


   .. py:method:: addOverride(path, value)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addOverride>`

      Adds an override to the synthesized CloudFormation resource. To add a

      property override, either use `addPropertyOverride` or prefix `path` with

      "Properties." (i.e. `Properties.TopicName`).



      :param path: The path of the property, you can use dot notation to override values in complex types. Any intermdediate keys will be created as needed.
      :type path: string
      :param value: The value. Could be primitive or complex.
      :type value: any


   .. py:method:: addPropertyDeletionOverride(propertyPath)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addPropertyDeletionOverride>`

      Adds an override that deletes the value of a property from the resource definition.



      :param propertyPath: The path to the property.
      :type propertyPath: string


   .. py:method:: addPropertyOverride(propertyPath, value)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.addPropertyOverride>`

      Adds an override to a resource property.

      

      Syntactic sugar for `addOverride("Properties.<...>", value)`.



      :param propertyPath: The path of the property
      :type propertyPath: string
      :param value: The value
      :type value: any


   .. py:method:: getAtt(attributeName) -> @aws-cdk/cdk.CfnReference

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.getAtt>`

      Returns a token for an runtime attribute of this resource.

      Ideally, use generated attribute accessors (e.g. `resource.arn`), but this can be used for future compatibility

      in case there is no generated attribute.



      :param attributeName: The name of the attribute.
      :type attributeName: string
      :rtype: :py:class:`@aws-cdk/cdk.CfnReference`\ 


   .. py:method:: toCloudFormation() -> json

      *Inherited from* :py:meth:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.toCloudFormation>`

      Emits CloudFormation for this resource.



      :rtype: json


   .. py:attribute:: options

      *Inherited from* :py:attr:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.options>`

      Options for this resource, such as condition, update policy etc.



      :type: :py:class:`@aws-cdk/cdk.ResourceOptions`\  *(readonly)*


   .. py:attribute:: properties

      *Inherited from* :py:attr:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.properties>`

      AWS resource properties.

      

      This object is rendered via a call to "renderProperties(this.properties)".



      *Protected property*

      :type: any *(readonly)*


   .. py:attribute:: resourceType

      *Inherited from* :py:attr:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.resourceType>`

      AWS resource type.



      :type: string *(readonly)*


   .. py:attribute:: untypedPropertyOverrides

      *Inherited from* :py:attr:`@aws-cdk/cdk.Resource <@aws-cdk/cdk.Resource.untypedPropertyOverrides>`

      AWS resource property overrides.

      

      During synthesis, the method "renderProperties(this.overrides)" is called

      with this object, and merged on top of the output of

      "renderProperties(this.properties)".

      

      Derived classes should expose a strongly-typed version of this object as

      a public property called `propertyOverrides`.



      *Protected property*

      :type: any *(readonly)*


   .. py:method:: overrideLogicalId(newLogicalId)

      *Inherited from* :py:meth:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.overrideLogicalId>`

      Overrides the auto-generated logical ID with a specific ID.



      :param newLogicalId: The new logical ID to use for this stack element.
      :type newLogicalId: string


   .. py:method:: prepare()

      *Inherited from* :py:meth:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.prepare>`

      Automatically detect references in this StackElement



      *Protected method*



   .. py:attribute:: creationStackTrace

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.creationStackTrace>`

      :type: string[] *(readonly)*


   .. py:attribute:: logicalId

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.logicalId>`

      The logical ID for this CloudFormation stack element. The logical ID of the element

      is calculated from the path of the resource node in the construct tree.

      

      To override this value, use `overrideLogicalId(newLogicalId)`.



      :type: string *(readonly)*


   .. py:attribute:: stackPath

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.stackPath>`

      Return the path with respect to the stack



      :type: string *(readonly)*


   .. py:attribute:: stack

      *Inherited from* :py:attr:`@aws-cdk/cdk.StackElement <@aws-cdk/cdk.StackElement.stack>`

      The stack this Construct has been made a part of



      *Protected property*

      :type: :py:class:`@aws-cdk/cdk.Stack`\ 


CfnSecretTargetAttachmentProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: CfnSecretTargetAttachmentProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SecretsManager;

      .. code-tab:: java

         import software.amazon.awscdk.services.secretsmanager.CfnSecretTargetAttachmentProps;

      .. code-tab:: javascript

         // CfnSecretTargetAttachmentProps is an interface

      .. code-tab:: typescript

         import { CfnSecretTargetAttachmentProps } from '@aws-cdk/aws-secretsmanager';





   .. py:attribute:: secretId

      ``AWS::SecretsManager::SecretTargetAttachment.SecretId``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-secretsmanager-secrettargetattachment.html#cfn-secretsmanager-secrettargetattachment-secretid


      :type: string


   .. py:attribute:: targetId

      ``AWS::SecretsManager::SecretTargetAttachment.TargetId``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-secretsmanager-secrettargetattachment.html#cfn-secretsmanager-secrettargetattachment-targetid


      :type: string


   .. py:attribute:: targetType

      ``AWS::SecretsManager::SecretTargetAttachment.TargetType``

      http://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/aws-resource-secretsmanager-secrettargetattachment.html#cfn-secretsmanager-secrettargetattachment-targettype


      :type: string


ISecret (interface)
^^^^^^^^^^^^^^^^^^^

.. py:class:: ISecret

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SecretsManager;

      .. code-tab:: java

         import software.amazon.awscdk.services.secretsmanager.ISecret;

      .. code-tab:: javascript

         // ISecret is an interface

      .. code-tab:: typescript

         import { ISecret } from '@aws-cdk/aws-secretsmanager';



   A secret in AWS Secrets Manager.



   :extends: :py:class:`@aws-cdk/cdk.IConstruct`\ 


   .. py:attribute:: secretArn

      The ARN of the secret in AWS Secrets Manager.



      :type: string *(readonly)*


   .. py:attribute:: encryptionKey

      The customer-managed encryption key that is used to encrypt this secret, if any. When not specified, the default

      KMS key for the account and region is being used.



      :type: :py:class:`@aws-cdk/aws-kms.IEncryptionKey`\  *(optional)* *(readonly)*


   .. py:method:: export() -> @aws-cdk/aws-secretsmanager.SecretImportProps

      Exports this secret.



      :return: import props that can be passed back to ``Secret.import``.
      :rtype: :py:class:`~@aws-cdk/aws-secretsmanager.SecretImportProps`\ 
      :abstract: Yes


   .. py:method:: grantRead(grantee, [versionStages])

      Grants reading the secret value to some role.



      :param grantee: the principal being granted permission.
      :type grantee: :py:class:`@aws-cdk/aws-iam.IPrincipal`\ 
      :param versionStages: the version stages the grant is limited to. If not specified, no restriction on the version stages is applied.
      :type versionStages: string[] *(optional)*
      :abstract: Yes


   .. py:method:: toSecretString() -> @aws-cdk/aws-secretsmanager.SecretString

      Returns a SecretString corresponding to this secret, so that the secret value can be referred to from other parts

      of the application (such as an RDS instance's master user password property).



      :rtype: :py:class:`~@aws-cdk/aws-secretsmanager.SecretString`\ 
      :abstract: Yes


   .. py:attribute:: node

      *Inherited from* :py:attr:`@aws-cdk/cdk.IConstruct <@aws-cdk/cdk.IConstruct.node>`

      The construct node in the scope tree.



      :type: :py:class:`@aws-cdk/cdk.ConstructNode`\  *(readonly)*


   .. py:attribute:: dependencyRoots

      *Inherited from* :py:attr:`@aws-cdk/cdk.IDependable <@aws-cdk/cdk.IDependable.dependencyRoots>`

      The set of constructs that form the root of this dependable

      

      All resources under all returned constructs are included in the ordering

      dependency.



      :type: :py:class:`@aws-cdk/cdk.IConstruct`\ [] *(readonly)*


Secret
^^^^^^

.. py:class:: Secret(scope, id, [props])

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SecretsManager;

      .. code-tab:: java

         import software.amazon.awscdk.services.secretsmanager.Secret;

      .. code-tab:: javascript

         const { Secret } = require('@aws-cdk/aws-secretsmanager');

      .. code-tab:: typescript

         import { Secret } from '@aws-cdk/aws-secretsmanager';



   Creates a new secret in AWS SecretsManager.



   :extends: :py:class:`~@aws-cdk/aws-secretsmanager.SecretBase`\ 
   :param scope: 
   :type scope: :py:class:`@aws-cdk/cdk.Construct`\ 
   :param id: 
   :type id: string
   :param props: 
   :type props: :py:class:`~@aws-cdk/aws-secretsmanager.SecretProps`\  *(optional)*

   .. py:staticmethod:: import(scope, id, props) -> @aws-cdk/aws-secretsmanager.ISecret

      Import an existing secret into the Stack.



      :param scope: the scope of the import.
      :type scope: :py:class:`@aws-cdk/cdk.Construct`\ 
      :param id: the ID of the imported Secret in the construct tree.
      :type id: string
      :param props: the attributes of the imported secret.
      :type props: :py:class:`~@aws-cdk/aws-secretsmanager.SecretImportProps`\ 
      :rtype: :py:class:`~@aws-cdk/aws-secretsmanager.ISecret`\ 


   .. py:method:: export() -> @aws-cdk/aws-secretsmanager.SecretImportProps

      *Implements* :py:meth:`@aws-cdk/aws-secretsmanager.SecretBase.export`

      Exports this secret.



      :rtype: :py:class:`~@aws-cdk/aws-secretsmanager.SecretImportProps`\ 


   .. py:attribute:: secretArn

      *Implements* :py:meth:`@aws-cdk/aws-secretsmanager.SecretBase.secretArn`

      The ARN of the secret in AWS Secrets Manager.



      :type: string *(readonly)*


   .. py:attribute:: encryptionKey

      *Implements* :py:meth:`@aws-cdk/aws-secretsmanager.SecretBase.encryptionKey`

      The customer-managed encryption key that is used to encrypt this secret, if any. When not specified, the default

      KMS key for the account and region is being used.



      :type: :py:class:`@aws-cdk/aws-kms.IEncryptionKey`\  *(optional)* *(readonly)*


   .. py:method:: grantRead(grantee, [versionStages])

      *Inherited from* :py:meth:`@aws-cdk/aws-secretsmanager.SecretBase <@aws-cdk/aws-secretsmanager.SecretBase.grantRead>`

      Grants reading the secret value to some role.



      :param grantee: 
      :type grantee: :py:class:`@aws-cdk/aws-iam.IPrincipal`\ 
      :param versionStages: 
      :type versionStages: string[] *(optional)*


   .. py:method:: toSecretString() -> @aws-cdk/aws-secretsmanager.SecretString

      *Inherited from* :py:meth:`@aws-cdk/aws-secretsmanager.SecretBase <@aws-cdk/aws-secretsmanager.SecretBase.toSecretString>`

      Returns a SecretString corresponding to this secret, so that the secret value can be referred to from other parts

      of the application (such as an RDS instance's master user password property).



      :rtype: :py:class:`~@aws-cdk/aws-secretsmanager.SecretString`\ 


   .. py:method:: apply(aspect)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.apply>`

      Applies the aspect to this Constructs node



      :param aspect: 
      :type aspect: :py:class:`@aws-cdk/cdk.IAspect`\ 


   .. py:method:: prepare()

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.prepare>`

      Perform final modifications before synthesis

      

      This method can be implemented by derived constructs in order to perform

      final changes before synthesis. prepare() will be called after child

      constructs have been prepared.

      

      This is an advanced framework feature. Only use this if you

      understand the implications.



      *Protected method*



   .. py:method:: toString() -> string

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.toString>`

      Returns a string representation of this construct.



      :rtype: string


   .. py:method:: validate() -> string[]

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.validate>`

      Validate the current construct.

      

      This method can be implemented by derived constructs in order to perform

      validation logic. It is called on all constructs before synthesis.



      *Protected method*

      :return: An array of validation error messages, or an empty array if there the construct is valid.
      :rtype: string[]


   .. py:attribute:: dependencyRoots

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.dependencyRoots>`

      The set of constructs that form the root of this dependable

      

      All resources under all returned constructs are included in the ordering

      dependency.



      :type: :py:class:`@aws-cdk/cdk.IConstruct`\ [] *(readonly)*


   .. py:attribute:: node

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.node>`

      Construct node.



      :type: :py:class:`@aws-cdk/cdk.ConstructNode`\  *(readonly)*


SecretBase
^^^^^^^^^^

.. py:class:: SecretBase(scope, id)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SecretsManager;

      .. code-tab:: java

         import software.amazon.awscdk.services.secretsmanager.SecretBase;

      .. code-tab:: javascript

         const { SecretBase } = require('@aws-cdk/aws-secretsmanager');

      .. code-tab:: typescript

         import { SecretBase } from '@aws-cdk/aws-secretsmanager';



   The common behavior of Secrets. Users should not use this class directly, and instead use ``Secret``.



   :extends: :py:class:`@aws-cdk/cdk.Construct`\ 
   :implements: :py:class:`~@aws-cdk/aws-secretsmanager.ISecret`\ 
   :abstract: Yes
   :param scope: The scope in which to define this construct
   :type scope: :py:class:`@aws-cdk/cdk.Construct`\ 
   :param id: The scoped construct ID. Must be unique amongst siblings. If the ID includes a path separator (`/`), then it will be replaced by double dash `--`.
   :type id: string

   .. py:method:: export() -> @aws-cdk/aws-secretsmanager.SecretImportProps

      *Implements* :py:meth:`@aws-cdk/aws-secretsmanager.ISecret.export`

      Exports this secret.



      :rtype: :py:class:`~@aws-cdk/aws-secretsmanager.SecretImportProps`\ 
      :abstract: Yes


   .. py:method:: grantRead(grantee, [versionStages])

      *Implements* :py:meth:`@aws-cdk/aws-secretsmanager.ISecret.grantRead`

      Grants reading the secret value to some role.



      :param grantee: 
      :type grantee: :py:class:`@aws-cdk/aws-iam.IPrincipal`\ 
      :param versionStages: 
      :type versionStages: string[] *(optional)*


   .. py:method:: toSecretString() -> @aws-cdk/aws-secretsmanager.SecretString

      *Implements* :py:meth:`@aws-cdk/aws-secretsmanager.ISecret.toSecretString`

      Returns a SecretString corresponding to this secret, so that the secret value can be referred to from other parts

      of the application (such as an RDS instance's master user password property).



      :rtype: :py:class:`~@aws-cdk/aws-secretsmanager.SecretString`\ 


   .. py:attribute:: secretArn

      *Implements* :py:meth:`@aws-cdk/aws-secretsmanager.ISecret.secretArn`

      The ARN of the secret in AWS Secrets Manager.



      :type: string *(readonly)* *(abstract)*


   .. py:attribute:: encryptionKey

      *Implements* :py:meth:`@aws-cdk/aws-secretsmanager.ISecret.encryptionKey`

      The customer-managed encryption key that is used to encrypt this secret, if any. When not specified, the default

      KMS key for the account and region is being used.



      :type: :py:class:`@aws-cdk/aws-kms.IEncryptionKey`\  *(optional)* *(readonly)* *(abstract)*


   .. py:method:: apply(aspect)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.apply>`

      Applies the aspect to this Constructs node



      :param aspect: 
      :type aspect: :py:class:`@aws-cdk/cdk.IAspect`\ 


   .. py:method:: prepare()

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.prepare>`

      Perform final modifications before synthesis

      

      This method can be implemented by derived constructs in order to perform

      final changes before synthesis. prepare() will be called after child

      constructs have been prepared.

      

      This is an advanced framework feature. Only use this if you

      understand the implications.



      *Protected method*



   .. py:method:: toString() -> string

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.toString>`

      Returns a string representation of this construct.



      :rtype: string


   .. py:method:: validate() -> string[]

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.validate>`

      Validate the current construct.

      

      This method can be implemented by derived constructs in order to perform

      validation logic. It is called on all constructs before synthesis.



      *Protected method*

      :return: An array of validation error messages, or an empty array if there the construct is valid.
      :rtype: string[]


   .. py:attribute:: dependencyRoots

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.dependencyRoots>`

      The set of constructs that form the root of this dependable

      

      All resources under all returned constructs are included in the ordering

      dependency.



      :type: :py:class:`@aws-cdk/cdk.IConstruct`\ [] *(readonly)*


   .. py:attribute:: node

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.node>`

      Construct node.



      :type: :py:class:`@aws-cdk/cdk.ConstructNode`\  *(readonly)*


SecretImportProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: SecretImportProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SecretsManager;

      .. code-tab:: java

         import software.amazon.awscdk.services.secretsmanager.SecretImportProps;

      .. code-tab:: javascript

         // SecretImportProps is an interface

      .. code-tab:: typescript

         import { SecretImportProps } from '@aws-cdk/aws-secretsmanager';



   Attributes required to import an existing secret into the Stack.





   .. py:attribute:: secretArn

      The ARN of the secret in SecretsManager.



      :type: string


   .. py:attribute:: encryptionKey

      The encryption key that is used to encrypt the secret, unless the default SecretsManager key is used.



      :type: :py:class:`@aws-cdk/aws-kms.IEncryptionKey`\  *(optional)*


SecretProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: SecretProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SecretsManager;

      .. code-tab:: java

         import software.amazon.awscdk.services.secretsmanager.SecretProps;

      .. code-tab:: javascript

         // SecretProps is an interface

      .. code-tab:: typescript

         import { SecretProps } from '@aws-cdk/aws-secretsmanager';



   The properties required to create a new secret in AWS Secrets Manager.





   .. py:attribute:: description

      An optional, human-friendly description of the secret.



      :type: string *(optional)*


   .. py:attribute:: encryptionKey

      The customer-managed encryption key to use for encrypting the secret value.



      :type: :py:class:`@aws-cdk/aws-kms.IEncryptionKey`\  *(optional)*
      :default: a default KMS key for the account and region is used.


   .. py:attribute:: generateSecretString

      Configuration for how to generate a secret value.



      :type: :py:class:`~@aws-cdk/aws-secretsmanager.SecretStringGenerator`\  *(optional)*
      :default: 32 characters with upper-case letters, lower-case letters, punctuation and numbers (at least one from each
category), per the default values of ``SecretStringGenerator``.


   .. py:attribute:: name

      A name for the secret. Note that deleting secrets from SecretsManager does not happen immediately, but after a 7 to

      30 days blackout period. During that period, it is not possible to create another secret that shares the same name.



      :type: string *(optional)*
      :default: a name is generated by CloudFormation.


SecretString
^^^^^^^^^^^^

.. py:class:: SecretString(scope, id, props)

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SecretsManager;

      .. code-tab:: java

         import software.amazon.awscdk.services.secretsmanager.SecretString;

      .. code-tab:: javascript

         const { SecretString } = require('@aws-cdk/aws-secretsmanager');

      .. code-tab:: typescript

         import { SecretString } from '@aws-cdk/aws-secretsmanager';



   References a secret string in Secrets Manager



   :extends: :py:class:`@aws-cdk/cdk.DynamicReference`\ 
   :param scope: 
   :type scope: :py:class:`@aws-cdk/cdk.Construct`\ 
   :param id: 
   :type id: string
   :param props: 
   :type props: :py:class:`~@aws-cdk/aws-secretsmanager.SecretStringProps`\ 

   .. py:method:: jsonFieldValue(key) -> string

      Interpret the secret as a JSON object and return a field's value from it



      :param key: 
      :type key: string
      :rtype: string


   .. py:attribute:: props

      :type: :py:class:`~@aws-cdk/aws-secretsmanager.SecretStringProps`\  *(readonly)*


   .. py:attribute:: value

      *Overrides* :py:attr:`@aws-cdk/cdk.DynamicReference.value`

      Return the full value of the secret



      :type: string *(readonly)*


   .. py:method:: apply(aspect)

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.apply>`

      Applies the aspect to this Constructs node



      :param aspect: 
      :type aspect: :py:class:`@aws-cdk/cdk.IAspect`\ 


   .. py:method:: prepare()

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.prepare>`

      Perform final modifications before synthesis

      

      This method can be implemented by derived constructs in order to perform

      final changes before synthesis. prepare() will be called after child

      constructs have been prepared.

      

      This is an advanced framework feature. Only use this if you

      understand the implications.



      *Protected method*



   .. py:method:: toString() -> string

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.toString>`

      Returns a string representation of this construct.



      :rtype: string


   .. py:method:: validate() -> string[]

      *Inherited from* :py:meth:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.validate>`

      Validate the current construct.

      

      This method can be implemented by derived constructs in order to perform

      validation logic. It is called on all constructs before synthesis.



      *Protected method*

      :return: An array of validation error messages, or an empty array if there the construct is valid.
      :rtype: string[]


   .. py:attribute:: dependencyRoots

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.dependencyRoots>`

      The set of constructs that form the root of this dependable

      

      All resources under all returned constructs are included in the ordering

      dependency.



      :type: :py:class:`@aws-cdk/cdk.IConstruct`\ [] *(readonly)*


   .. py:attribute:: node

      *Inherited from* :py:attr:`@aws-cdk/cdk.Construct <@aws-cdk/cdk.Construct.node>`

      Construct node.



      :type: :py:class:`@aws-cdk/cdk.ConstructNode`\  *(readonly)*


   .. py:method:: makeResolveValue(service, referenceKey) -> string

      *Inherited from* :py:meth:`@aws-cdk/cdk.DynamicReference <@aws-cdk/cdk.DynamicReference.makeResolveValue>`

      Make a dynamic reference Token value

      

      This is a value (similar to CDK Tokens) that will be substituted by

      CloudFormation before executing the changeset.



      *Protected method*

      :param service: 
      :type service: :py:class:`@aws-cdk/cdk.DynamicReferenceService`\ 
      :param referenceKey: 
      :type referenceKey: string
      :rtype: string


SecretStringGenerator (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: SecretStringGenerator

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SecretsManager;

      .. code-tab:: java

         import software.amazon.awscdk.services.secretsmanager.SecretStringGenerator;

      .. code-tab:: javascript

         // SecretStringGenerator is an interface

      .. code-tab:: typescript

         import { SecretStringGenerator } from '@aws-cdk/aws-secretsmanager';



   Configuration to generate secrets such as passwords automatically.





   .. py:attribute:: excludeCharacters

      A string that includes characters that shouldn't be included in the generated password. The string can be a minimum

      of ``0`` and a maximum of ``4096`` characters long.



      :type: string *(optional)*
      :default: no exclusions


   .. py:attribute:: excludeLowercase

      Specifies that the generated password shouldn't include lowercase letters.



      :type: boolean *(optional)*
      :default: false


   .. py:attribute:: excludeNumbers

      Specifies that the generated password shouldn't include digits.



      :type: boolean *(optional)*
      :default: false


   .. py:attribute:: excludePunctuation

      Specifies that the generated password shouldn't include punctuation characters.



      :type: boolean *(optional)*
      :default: false


   .. py:attribute:: excludeUppercase

      Specifies that the generated password shouldn't include uppercase letters.



      :type: boolean *(optional)*
      :default: false


   .. py:attribute:: includeSpace

      Specifies that the generated password can include the space character.



      :type: boolean *(optional)*
      :default: false


   .. py:attribute:: passwordLength

      The desired length of the generated password.



      :type: number *(optional)*
      :default: 32


   .. py:attribute:: requireEachIncludedType

      Specifies whether the generated password must include at least one of every allowed character type.



      :type: boolean *(optional)*
      :default: true


SecretStringProps (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: SecretStringProps

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SecretsManager;

      .. code-tab:: java

         import software.amazon.awscdk.services.secretsmanager.SecretStringProps;

      .. code-tab:: javascript

         // SecretStringProps is an interface

      .. code-tab:: typescript

         import { SecretStringProps } from '@aws-cdk/aws-secretsmanager';



   Properties for a SecretString





   .. py:attribute:: secretId

      Unique identifier or ARN of the secret



      :type: string


   .. py:attribute:: versionId

      Specifies the unique identifier of the version of the secret that you want to use in stack operations.

      

      Can specify at most one of versionId and versionStage.



      :type: string *(optional)*
      :default: AWSCURRENT


   .. py:attribute:: versionStage

      Specifies the secret version that you want to retrieve by the staging label attached to the version.

      

      Can specify at most one of versionId and versionStage.



      :type: string *(optional)*
      :default: AWSCURRENT


TemplatedSecretStringGenerator (interface)
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

.. py:class:: TemplatedSecretStringGenerator

   **Language-specific names:**

   .. tabs::

      .. code-tab:: c#

         using Amazon.CDK.AWS.SecretsManager;

      .. code-tab:: java

         import software.amazon.awscdk.services.secretsmanager.TemplatedSecretStringGenerator;

      .. code-tab:: javascript

         // TemplatedSecretStringGenerator is an interface

      .. code-tab:: typescript

         import { TemplatedSecretStringGenerator } from '@aws-cdk/aws-secretsmanager';



   Configuration to generate secrets such as passwords automatically, and include them in a JSON object template.



   :extends: :py:class:`~@aws-cdk/aws-secretsmanager.SecretStringGenerator`\ 


   .. py:attribute:: generateStringKey

      The JSON key name that's used to add the generated password to the JSON structure specified by the

      ``secretStringTemplate`` parameter.



      :type: string


   .. py:attribute:: secretStringTemplate

      A properly structured JSON string that the generated password can be added to. The ``generateStringKey`` is

      combined with the generated random string and inserted into the JSON structure that's specified by this parameter.

      The merged JSON string is returned as the completed SecretString of the secret.



      :type: string


   .. py:attribute:: excludeCharacters

      *Inherited from* :py:attr:`@aws-cdk/aws-secretsmanager.SecretStringGenerator <@aws-cdk/aws-secretsmanager.SecretStringGenerator.excludeCharacters>`

      A string that includes characters that shouldn't be included in the generated password. The string can be a minimum

      of ``0`` and a maximum of ``4096`` characters long.



      :type: string *(optional)*
      :default: no exclusions


   .. py:attribute:: excludeLowercase

      *Inherited from* :py:attr:`@aws-cdk/aws-secretsmanager.SecretStringGenerator <@aws-cdk/aws-secretsmanager.SecretStringGenerator.excludeLowercase>`

      Specifies that the generated password shouldn't include lowercase letters.



      :type: boolean *(optional)*
      :default: false


   .. py:attribute:: excludeNumbers

      *Inherited from* :py:attr:`@aws-cdk/aws-secretsmanager.SecretStringGenerator <@aws-cdk/aws-secretsmanager.SecretStringGenerator.excludeNumbers>`

      Specifies that the generated password shouldn't include digits.



      :type: boolean *(optional)*
      :default: false


   .. py:attribute:: excludePunctuation

      *Inherited from* :py:attr:`@aws-cdk/aws-secretsmanager.SecretStringGenerator <@aws-cdk/aws-secretsmanager.SecretStringGenerator.excludePunctuation>`

      Specifies that the generated password shouldn't include punctuation characters.



      :type: boolean *(optional)*
      :default: false


   .. py:attribute:: excludeUppercase

      *Inherited from* :py:attr:`@aws-cdk/aws-secretsmanager.SecretStringGenerator <@aws-cdk/aws-secretsmanager.SecretStringGenerator.excludeUppercase>`

      Specifies that the generated password shouldn't include uppercase letters.



      :type: boolean *(optional)*
      :default: false


   .. py:attribute:: includeSpace

      *Inherited from* :py:attr:`@aws-cdk/aws-secretsmanager.SecretStringGenerator <@aws-cdk/aws-secretsmanager.SecretStringGenerator.includeSpace>`

      Specifies that the generated password can include the space character.



      :type: boolean *(optional)*
      :default: false


   .. py:attribute:: passwordLength

      *Inherited from* :py:attr:`@aws-cdk/aws-secretsmanager.SecretStringGenerator <@aws-cdk/aws-secretsmanager.SecretStringGenerator.passwordLength>`

      The desired length of the generated password.



      :type: number *(optional)*
      :default: 32


   .. py:attribute:: requireEachIncludedType

      *Inherited from* :py:attr:`@aws-cdk/aws-secretsmanager.SecretStringGenerator <@aws-cdk/aws-secretsmanager.SecretStringGenerator.requireEachIncludedType>`

      Specifies whether the generated password must include at least one of every allowed character type.



      :type: boolean *(optional)*
      :default: true


